[package]
name = "py3-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
libmodcore = { path = "../../../libmodcore" }
libcommon = { path = "../../../libcommon" }
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
anyhow = "1.0.102"
thiserror = "2.0.18"
clap = "4.6.1"
log = "0.4.29"
chrono = "0.4.44"
indexmap = "2.14.0"
rustpython-pylib = { git = "https://github.com/RustPython/RustPython.git", features = ["freeze-stdlib"] }
rustpython = { git = "https://github.com/RustPython/RustPython.git", features = ["freeze-stdlib"] }
rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", features = ["freeze-stdlib"] }
# rustpython-pylib = { path = "../../../../RustPython/crates/pylib", features = ["freeze-stdlib"] }
# rustpython = { path = "../../../../RustPython", features = ["freeze-stdlib"] }
# rustpython-vm = { path = "../../../../RustPython/crates/vm", features = ["freeze-stdlib"] }

[dev-dependencies]
tempfile = "3.27.0"
