[package]
name = "wasm-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
libsysinspect = { path = "../../../libsysinspect" }
libmodcore = { path = "../../../libmodcore" }
libcommon = { path = "../../../libcommon" }
wasmruntime = { git = "https://github.com/isbm/wasmruntime.git", branch = "master" }
tokio = { version = "1.52.3", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
anyhow = "1.0.102"
thiserror = "2.0.18"
futures = "0.3.32"
pin-utils = "0.1.0"
clap = "4.6.1"
log = "0.4.29"
chrono = "0.4.44"
colored = "3.1.1"
wasmtime = "36.0.10"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
