[package]
name = "net"
version = "0.1.0"
edition = "2021"

[dependencies]
libsysinspect = { path = "../../../libsysinspect" }
neli = { version = "0.6.4", features = ["async", "netfilter", "tokio"] }
nix = { version = "0.29.0", features = ["net"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
sysinfo = { version = "0.32.0", features = ["linux-netdevs", "linux-tmpfs"] }
tokio = { version = "1.40.0", features = ["full"] }
