[package]
name = "net"
version = "0.2.0"
edition = "2024"

[dependencies]
libsysinspect = { path = "../../../libsysinspect" }
libmodcore = { path = "../../../libmodcore" }
neli = { version = "0.6.5", features = ["async", "netfilter", "tokio"] }
nix = { version = "0.29.0", features = ["net"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
sysinfo = { version = "0.32.1", features = ["linux-netdevs", "linux-tmpfs"] }
tokio = { version = "1.47.1", features = ["full"] }
