[package]
name = "proc"
version = "0.1.0"
edition = "2021"

[dependencies]
libsysinspect = { path = "../../../libsysinspect" }
procfs = "0.16.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
sysinfo = { version = "0.31.4", features = ["linux-netdevs", "linux-tmpfs"] }
