[package]
name = "proc"
version = "0.2.0"
edition = "2024"

[dependencies]
libsysinspect = { path = "../../../libsysinspect" }
procfs = "0.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sysinfo = { version = "0.32.1", features = ["linux-netdevs", "linux-tmpfs"] }
