[package]
name = "ssrun"
version = "0.1.0"
edition = "2024"

[dependencies]
libsysinspect = { path = "../../../libsysinspect" }
libmodcore = { path = "../../../libmodcore" }
anyhow = "1.0.100"
dotenv = "0.15.0"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
maplit = "1.0.2"
